set up redis & refresh token
