# docs/api.yaml
@@ -8,16 +8,80 @@ servers:
     description: Local server
 paths:
   /APIKey:
-    $ref: './paths/apiKey.yaml'
+    post:
+      tags:
+        - API Key Controller
+      summary: Create a new API key
+      security:
+        - apiKey: []
+        - clientID: []
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - permissions
+              properties:
+                permissions:
+                  type: array
+                  example: ['2222', '3333']
+      responses:
+        '201':
+          description: Created
+        '404':
+          description: Not Found
+        '500':
+          description: Server Error
+    get:
+      tags:
+        - API Key Controller
+      summary: Get list API keys
+      security:
+        - x-api-key: []
+        - x-client-id: []
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Ok
+        '404':
+          description: Not Found
+        '500':
+          description: Server Error
+
   /APIKey/{id}:
-    $ref: './paths/apiKeyID.yaml'
+    delete:
+      tags:
+        - API Key Controller
+      summary: Delete a API key
+      security:
+        - x-api-key: []
+        - x-client-id: []
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+          description: id
+      responses:
+        '200':
+          description: OK
+        '404':
+          description: Not Found
+        '500':
+          description: Server Error
+
   /user/register:
     post:
       tags:
         - User Controller
       summary: Register
       security:
-        - x-api-key: []
+        - apiKey: []
       requestBody:
         required: true
         content:
@@ -39,13 +103,14 @@ paths:
           description: Not Found
         '500':
           description: Server Error
+
   /user/verify-email:
     get:
       tags:
         - User Controller
       summary: Verification account via email
       security:
-        - x-api-key: []
+        - apiKey: []
       parameters:
         - name: token
           in: query
@@ -60,13 +125,14 @@ paths:
           description: Not Found
         '500':
           description: Server Error
+
   /user/login:
     post:
       tags:
         - User Controller
       summary: User login with email and password
       security:
-        - x-api-key: []
+        - apiKey: []
       requestBody:
         required: true
         content:
@@ -79,9 +145,10 @@ paths:
               properties:
                 email:
                   type: string
-                  example: 'example@gmail.com'
+                  example: 'huynhnhathao0609@gmail.com'
                 password:
                   type: string
+                  example: 'sZ5qrBDR'
       responses:
         '201':
           description: Created
@@ -89,6 +156,7 @@ paths:
           description: Not Found
         '500':
           description: Server Error
+
   /user/logout:
     delete:
       tags:
@@ -105,10 +173,109 @@ paths:
           description: Not Found
         '500':
           description: Server Error
+
+  /user/refresh-token:
+    delete:
+      tags:
+        - User Controller
+      summary: User login with email and password
+      security:
+        - refreshToken: []
+        - apiKey: []
+        - clientID: []
+      responses:
+        '200':
+          description: Created
+        '404':
+          description: Not Found
+        '500':
+          description: Server Error
+
   /template/:
-    $ref: './paths/templateMail.yaml'
+    post:
+      tags:
+        - Template Controller
+      summary: Create a template
+      security:
+        - apiKey: []
+        - clientID: []
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - name
+              properties:
+                name:
+                  type: string
+                  example: 'HTML_EMAIL_SEND_TOKEN'
+      responses:
+        '201':
+          description: Created
+        '409':
+          description: Conflict
+        '404':
+          description: Not Found
+        '500':
+          description: Server Error
+    get:
+      tags:
+        - Template Controller
+      summary: Get list templates
+      security:
+        - apiKey: []
+        - clientID: []
+        - bearerAuth: []
+      responses:
+        '200':
+          description: OK
+        '404':
+          description: Not Found
+        '500':
+          description: Server Error
+
   /template/{id}:
-    $ref: './paths/templateMailID.yaml'
+    delete:
+      tags:
+        - Template Controller
+      summary: delete a template
+      security:
+        - apiKey: []
+        - clientID: []
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+          description: id
+      responses:
+        '200':
+          description: OK
+        '404':
+          description: Not Found
+        '500':
+          description: Server Error
 components:
   securitySchemes:
-    $ref: './schemas/securitySchemes.yaml'
+    bearerAuth:
+      type: http
+      scheme: bearer
+      in: header
+      bearerFormat: JWT
+    apiKey:
+      type: apiKey
+      in: header
+      name: x-api-key
+    clientID:
+      type: apiKey
+      in: header
+      name: x-client-id
+    refreshToken:
+      type: apiKey
+      in: header
+      name: x-refresh-token
